<resources>
    <string name="app_name">SMART SETTINGS REMOTE</string>
    <string name="temperatureButton">Temperature</string>
    <string name="fuelButton">Fuel Level</string>
    <string name="radioButton">Radio</string>
    <string name="gpsButton">To Do List</string>
    <string name="lightsButton">Lights</string>
    <string name="odometerButton">Odometer</string>
    <string name="driveButton">Cruise Control</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">CLOSE</string>
    <string name="help_Message">Author: Bashir Mohmand, Salman Saghir\n
                                Version: 1.0\n\n
                                Vehicle Temperature: Activate Front or Back Switch to start AC/HEATER
                                                     Use slider from Right(COLD) to Left(HEAT)\n
                                Fuel: First box dispalys amount of fuel in tank, second show the distance
                                      a vehicle can travel with the amount of fuel \n
                                Radio: 6 Preset stations, press once on the button and it will play the station, press and hold
                                        a button to edit the channel\n
                                To Do List: Add appointments or to do items to the list with the Add Item button,
                                            each item has its own deleted button to remove the item\n
                                Lights:   turn Lights On/Off switch on to activate lights,
                                          after activating you have access to turning on the normal headlights or high beams, there is a seekbar to dim or brighten inner lights\n
                                Odometer: First box shows main odometer, second and third for trips traveled that can be reset to 0 with the reset buttons,
                                          every 6000km there will be a text and light appearing to do oil change\n
                                Cruise: Main cruise control On/Off switch to have access to the On/Off button of cruise on at a particular speed,
                                        there is an option in the bottom to enter your own kilometers that a vehicle will travel, enter number of km and press the set button.

    </string>


    <string name="dialog_Title">HELP</string>
    <string name="ok">OK</string>
    <string name="cancel1">CANCEL</string>
    <string name="dialog_title">Change Radio Station</string>

    <string name="autoString">AUTOMOBILE REMOTE</string>
    <string name="houseString">HOUSE SETTINGS</string>
    <string name="kitchenString">KITCHEN SMART REMOTE</string>
    <string name="livingroomString">LIVING ROOM</string>
    <string name="helpString">HELP</string>
    <string name="automobile_titleString">AUTOMOBILE</string>

    <string name="tempString">TEMPERATURE</string>
    <string name="odoString">ODOMETER</string>
    <string name="listString">TO DO LIST</string>
    <string name="radioString">RADIO</string>
    <string name="fuelString">FUEL LEVEL</string>
    <string name="lightsString">LIGHTS</string>
    <string name="activityString">ACTIVITY:</string>
    <string name="timeString">TIME:</string>

    <string name="stationString">Enter Station#:</string>
    <string name="cruiseString">CRUISE CONTROL</string>
    <string name="maincString">MAIN CRUISE ON/OFF </string>
    <string name="acMain">ACTIVATED MODE: </string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="driveDistance">DRIVE DISTANCE:</string>
    <string name="kmDrive">ENTER KILOMETERS TO DRIVE:</string>
    <string name="set">SET</string>

    <string name="fuel_title">FUEL LEVEL</string>
    <string name="fuel_amount">FUEL AMOUNT:</string>
    <string name="fuel_distance">FUEL/DISTANCE AMOUNT:</string>
    <string name="fill_tank">FILL TANK</string>

    <string name="lights_title">HEADLIGHTS SETTINGS</string>
    <string name="on_headlights">TURN ON HEADLIGHTS</string>
    <string name="lights_onoff">LIGHTS ON/OFF</string>
    <string name="lights_normal">Normal</string>
    <string name="highbeams">HighBeams</string>
    <string name="innerlights">Inner Lights:</string>
    <string name="low">LOW</string>
    <string name="high">HIGH</string>

    <string name="odometer">ODOMETER</string>
    <string name="tripA">TRIP A:</string>
    <string name="tripB">TRIP B:</string>


    <string name="radio">RADIO</string>
    <string name="channel">CHANNEL</string>
    <string name="station">STATION</string>
    <string name="firstdes">Press to play station</string>
    <string name="seconddes">Press and Hold to edit channel</string>

    <string name="temp">TEMPERATURE</string>
    <string name="front">FRONT</string>
    <string name="back">BACK</string>
    <string name="cold">COLD</string>
    <string name="hot">HOT</string>

    <string name="todo_list">APPOINTMENT/TO DO LIST</string>
    <string name="sub_title1">ADD/REMOVE ITEMS</string>
    <string name="add_item">+ ADD ITEM</string>

    <string name="house_settings">HOUSE SETTINGS</string>
    <string name="kitchen_settings">KITCHEN SETTINGS</string>
    <string name="living_settings">LIVINGROOM SETTINGS</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_itemlist_list">Items</string>
    <string name="title_itemlist_detail">Item_list Detail</string>


</resources>
