<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOrange"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:background="#27e737"

        app:popupTheme="@style/PopupOverlay"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" >  <View
        android:layout_width="1dip"
        android:layout_height="match_parent"
        android:background="#ffffff" /></android.support.v7.widget.Toolbar>




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lights_title"
        android:id="@+id/textView9"
        android:textColor="#f40d0d"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/activity_horizontal_margin1"
        android:layout_marginBottom="@dimen/activity_horizontal_margin1"
        android:layout_gravity="center_horizontal"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_headlights"
        android:id="@+id/textView10"
        android:textColor="#0814f8"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="@dimen/activity_horizontal_margin1"
        android:layout_marginBottom="@dimen/activity_horizontal_margin1"/>


    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lights_onoff"
        android:id="@+id/switch3"
        android:checked="false"
        android:layout_column="1"
        android:textColorHighlight="#cd9999"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:layout_weight="0.06"
        android:textSize="20dp" />




            <Switch
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:text="@string/lights_normal"
                android:id="@+id/switch4"
                android:checked="false"
                android:layout_column="15"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="45dp"
                android:textSize="20dp" />


            <Switch
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:text="@string/highbeams"
                android:id="@+id/switch5"
                android:checked="false"
                android:layout_column="15"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="45dp"
                android:layout_marginLeft="45dp"
                android:textSize="20dp" />

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:dividerPadding="2dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/innerlights"
        android:id="@+id/textView12"
        android:textColor="#0f1eec"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginBottom="8dp"
      />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high"
        android:id="@+id/textView14"
        android:layout_gravity="right"
        android:layout_above="@+id/seekBar3"
        android:layout_alignParentEnd="true"
        android:textSize="20dp"
        android:background="#ffffff"
        android:textColor="#f60505" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low"
        android:layout_below="@+id/textView12"
        android:id="@+id/textView13"
        android:textSize="20dp"
        android:textColor="#f40909"
        android:background="#ffffff" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/textView13"
        android:id="@+id/seekBar3"
        android:thumb="@drawable/lights" />
</RelativeLayout>
</LinearLayout>