<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/colorOrange">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#27e737"
        app:popupTheme="@style/PopupOverlay"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" >  <View
        android:layout_width="1dip"
        android:layout_height="match_parent"
        android:background="#ffffff" /></android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="385dp"
        android:layout_weight="0.60">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/switch2"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:textColor="#f60a0a"
            android:textSize="20dp"
            android:checked="false" />



        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/seekBar2"
            android:bottomRightRadius="10dp"
            android:bottomLeftRadius="10dp"
            android:topLeftRadius="10dp"
            android:topRightRadius="10dp"
            android:layout_below="@+id/textView5"
            android:layout_toStartOf="@+id/textView32"
            style="@android:style/Widget.Holo.Light.SeekBar" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/seekBar"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/switch1"
            android:bottomRightRadius="10dp"
            android:bottomLeftRadius="10dp"
            android:topLeftRadius="10dp"
            android:topRightRadius="10dp"
            android:layout_alignParentLeft="true"
            android:layout_toStartOf="@+id/textView32"
            style="@android:style/Widget.Holo.Light.SeekBar"
           />


        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/front"
            android:id="@+id/switch1"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="70dp"
            android:textColor="#ec0b0b"
            android:textSize="20dp"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp"
            android:textColor="#f60707"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/cold"
            android:id="@+id/textView5"
            android:layout_below="@+id/switch2"
            android:layout_alignParentStart="true"
            android:background="#faf3f3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hot"
            android:id="@+id/textView32"
            android:layout_above="@+id/seekBar2"
            android:layout_alignParentEnd="true"
            android:background="#f6eded" />

    </RelativeLayout>

</LinearLayout>