<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOrange">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"


        app:popupTheme="@style/PopupOverlay"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#37d12c">       <View
    android:layout_width="1dip"
    android:layout_height="match_parent"
    android:background="#ffffff" /></android.support.v7.widget.Toolbar>

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/tempString"
            android:id="@+id/temperatureButton"
            android:drawableLeft="@drawable/temperature"
            android:background="@drawable/buttonproperties"
android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:shadowColor="#ffffff"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/fuelString"
            android:id="@+id/fuelButton"
            android:drawableLeft="@drawable/fuel"
            android:background="@drawable/buttonproperties"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:layout_below="@+id/radioButton"
            android:layout_marginTop="@dimen/activity_horizontal_margin1"
            android:layout_marginBottom="@dimen/activity_horizontal_margin1"
            android:layout_alignEnd="@+id/radioButton"
            android:layout_alignStart="@+id/radioButton" />



        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/radioString"
            android:id="@+id/radioButton"
            android:drawableLeft="@drawable/radio"
            android:background="@drawable/buttonproperties"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:layout_below="@+id/gpsButton"
            android:layout_alignEnd="@+id/gpsButton"
            android:layout_marginTop="@dimen/activity_horizontal_margin1"
            android:layout_marginBottom="@dimen/activity_horizontal_margin1"
            android:layout_alignStart="@+id/gpsButton" />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/listString"
            android:id="@+id/gpsButton"
            android:drawableLeft="@drawable/list"
            android:background="@drawable/buttonproperties"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:layout_below="@+id/odometerButton"
            android:layout_alignEnd="@+id/odometerButton"
            android:layout_alignStart="@+id/odometerButton"
            android:layout_marginTop="@dimen/activity_horizontal_margin1"
            android:layout_marginBottom="@dimen/activity_horizontal_margin1"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/lightsString"
            android:id="@+id/lightsButton"
            android:drawableLeft="@drawable/lights"
            android:background="@drawable/buttonproperties"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:layout_below="@+id/fuelButton"
            android:layout_alignEnd="@+id/fuelButton"
            android:layout_alignStart="@+id/radioButton"
            android:layout_marginTop="@dimen/activity_horizontal_margin1"
            android:layout_marginBottom="@dimen/activity_horizontal_margin1"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/odoString"
            android:id="@+id/odometerButton"
            android:drawableLeft="@drawable/odometer"
            android:background="@drawable/buttonproperties"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:layout_below="@+id/temperatureButton"
            android:layout_alignEnd="@+id/temperatureButton"
            android:layout_alignStart="@+id/temperatureButton"
            android:layout_marginTop="@dimen/activity_horizontal_margin1"
            android:layout_marginBottom="@dimen/activity_horizontal_margin1"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/driveButton"
            android:id="@+id/driveButton"
            android:drawableLeft="@drawable/drive"
            android:background="@drawable/buttonproperties"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:layout_below="@+id/lightsButton"
            android:layout_alignEnd="@+id/lightsButton"
            android:layout_alignStart="@+id/lightsButton"
            android:layout_marginTop="@dimen/activity_horizontal_margin1"
            android:layout_marginBottom="@dimen/activity_horizontal_margin1"/>


    </RelativeLayout>

</LinearLayout>







