<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorOrange"
    android:weightSum="1">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"

        android:background="#27e737"

        app:popupTheme="@style/PopupOverlay"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" >  <View
        android:layout_width="1dip"
        android:layout_height="match_parent"
        android:background="#ffffff" /></android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio"
        android:id="@+id/textView"
        android:textColor="#f70404"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:id="@+id/imageView"
        android:src="@drawable/radiov"
        android:layout_gravity="right"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/station"
        android:id="@+id/textView2"
        android:background="#f3ce39"
        android:textColor="#040404"
        android:textSize="30dp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="193dp"
        android:layout_height="wrap_content"
        android:text="@string/firstdes"
        android:id="@+id/textView3"
        android:textSize="20dp"
        android:layout_above="@+id/button"
        android:layout_gravity="center_horizontal"

        />

    <TextView
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:text="@string/seconddes"
        android:id="@+id/textView4"
        android:textSize="20dp"
        android:layout_below="@+id/textView3"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:text="@string/channel"
        android:background="@drawable/buttonproperties"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:id="@+id/button"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:text="@string/channel"
        android:background="@drawable/buttonproperties"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:id="@+id/button6"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:text="@string/channel"
        android:background="@drawable/buttonproperties"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:id="@+id/button5"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:text="@string/channel"
        android:background="@drawable/buttonproperties"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:id="@+id/button4"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:text="@string/channel"
        android:background="@drawable/buttonproperties"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:id="@+id/button3"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:text="@string/channel"
        android:background="@drawable/buttonproperties"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:layout_margin="5dp"
        android:id="@+id/button2"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal"/>



</LinearLayout>